force-app/main/default/objects/vlocity_ins__GraphClone__c/fields/vlocity_ins__BlackListedFields__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BlackListedFields__c</fullName>
    <description>For blacklist object this is for specific field(s), comma separated, that should have their values blanked out. For whitelist object, this is the field that is the FK to the root object. It is typically a polymorphic Id so it is not picked up in the usual FK logic that GraphClone.cls uses. This must be the field API name including namespace.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fields To Skip Or Force</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>