force-app/main/default/objects/vlocity_ins__GraphClone__c/fields/vlocity_ins__ChildObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ChildObject__c</fullName>
    <description>Child object(s) being cloned. Use API name.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Child Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>