force-app/main/default/objects/vlocity_ins__GraphClone__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__RootObject__c</columns>
    <columns>vlocity_ins__ChildObject__c</columns>
    <columns>vlocity_ins__BlackListed__c</columns>
    <columns>vlocity_ins__BlackListedFields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>